Fixed long assessment answers wrapping to the left.
The form was pushed right by a float: left on the answer button, but
things wrap around floats, so we added margins, to make sure.

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -883,7 +883,11 @@ tbody {
     width: 500px;
     float: left;
     margin-right: 20px; }
-  .prompt { border: none; }
+  .prompt {
+    border: none;
+    padding-left: 0;
+  }
+  .prompt, .answer { margin-left: 150px; }
 }
 
 /*  Org Admin */
